--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,9 @@
   <body>
   <div class='app-title'><a href='{{ site.baseurl }}/'>{{ site.name }}</a></div>
     <article class='body-copy'>
+
+      <p class="warning">This version is deprecated, see http://malmostad.github.io/wag for the latest version.</p>
+
       {{ content }}
     </article>
     {% include nav.html %}
