--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
   <div class='app-title'><a href='{{ site.baseurl }}/'>{{ site.name }}</a></div>
     <article class='body-copy'>
 
-      <p class="warning">This version is deprecated. See the <a href="http://malmo.se/wag">latest version</a>.</p>
+      <p class="warning">This version is deprecated. See the <a href="https://malmo.se/wag">latest version</a>.</p>
 
       {{ content }}
     </article>
